--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
           <nav class="container-nav">
             <a class="logo" href="./index.html"> Web<span>Studio</span> </a>
             <ul class="nav">
-              <li><a class="nav-menu" href="./index.html">Studio</a></li>
+              <li>
+                <a class="nav-menu current" href="./index.html">Studio</a>
+              </li>
               <li><a class="nav-menu" href="">Portfolio</a></li>
               <li><a class="nav-menu" href="">Contacts</a></li>
             </ul>
@@ -59,6 +61,11 @@
             <h2 class="visually-hidden">Features</h2>
             <ul class="features-list">
               <li class="point">
+                <div class="features-icon-container">
+                  <svg class="features-icon">
+                    <use href="/images/icons.svg#icon-antenna-1"></use>
+                  </svg>
+                </div>
                 <h3 class="features-text">Strategy</h3>
                 <p class="p-text">
                   Our goal is to identify the business problem to walk away with
@@ -66,6 +73,11 @@
                 </p>
               </li>
               <li class="point">
+                <div class="features-icon-container">
+                  <svg class="features-icon">
+                    <use href="/images/icons.svg#icon-clock-1"></use>
+                  </svg>
+                </div>
                 <h3 class="features-text">Punctuality</h3>
                 <p class="p-text">
                   Bring the key message to the brand's audience for the best
@@ -73,6 +85,11 @@
                 </p>
               </li>
               <li class="point">
+                <div class="features-icon-container">
+                  <svg class="features-icon">
+                    <use href="/images/icons.svg#icon-diagram-1"></use>
+                  </svg>
+                </div>
                 <h3 class="features-text">Diligence</h3>
                 <p class="p-text">
                   Research and confirm brands that present the strongest digital
@@ -80,6 +97,11 @@
                 </p>
               </li>
               <li class="point">
+                <div class="features-icon-container">
+                  <svg class="features-icon">
+                    <use href="/images/icons.svg#icon-astronaut-1"></use>
+                  </svg>
+                </div>
                 <h3 class="features-text">Technologies</h3>
                 <p class="p-text">
                   Design practice focused on digital experiences. We bring forth
@@ -105,6 +127,30 @@
                   <h3 class="our-team-name">Mark Guerrero</h3>
                   <p class="our-team-text">Product Designer</p>
                 </div>
+                <div class="social-media">
+                  <ul class="social-list">
+                    <li class="social-icon-list">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </li>
+                    <li class="social-icon-list">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </li>
+                    <li class="social-icon-list">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </li>
+                    <li class="social-icon-list">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </li>
+                  </ul>
+                </div>
               </li>
               <li class="our-team-people">
                 <img
@@ -116,6 +162,30 @@
                 <div class="job-name">
                   <h3 class="our-team-name">Tom Ford</h3>
                   <p class="our-team-text">Frontend Developer</p>
+                </div>
+                <div class="social-media">
+                  <ul class="social-list">
+                    <li class="social-icon-list">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </li>
+                    <li class="social-icon-list">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </li>
+                    <li class="social-icon-list">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </li>
+                    <li class="social-icon-list">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </li>
+                  </ul>
                 </div>
               </li>
               <li class="our-team-people">
@@ -129,6 +199,30 @@
                   <h3 class="our-team-name">Camila Garcia</h3>
                   <p class="our-team-text">Marketing</p>
                 </div>
+                <div class="social-media">
+                  <ul class="social-list">
+                    <li class="social-icon-list">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </li>
+                    <li class="social-icon-list">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </li>
+                    <li class="social-icon-list">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </li>
+                    <li class="social-icon-list">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </li>
+                  </ul>
+                </div>
               </li>
               <li class="our-team-people">
                 <img
@@ -141,6 +235,30 @@
                   <h3 class="our-team-name">Daniel Wilson</h3>
                   <p class="our-team-text">UI Designer</p>
                 </div>
+                <div class="social-media">
+                  <ul class="social-list">
+                    <li class="social-icon-list">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </li>
+                    <li class="social-icon-list">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </li>
+                    <li class="social-icon-list">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </li>
+                    <li class="social-icon-list">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </li>
+                  </ul>
+                </div>
               </li>
             </ul>
           </div>
@@ -151,72 +269,126 @@
             <h2 class="our-portfolio">Our Portfolio</h2>
             <ul class="portfolio-list">
               <li class="portfolio-point">
-                <img
-                  src="./images/banking-app.jpg"
-                  alt="Banking App Photo"
-                  width="360"
-                  height="300"
-                />
+                <div class="overflow">
+                  <img
+                    src="./images/banking-app.jpg"
+                    alt="Banking App Photo"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="app-name">
                   <h3 class="portfolio-text">Banking App</h3>
                   <p class="portfolio-program">App</p>
                 </div>
               </li>
               <li class="portfolio-point">
-                <img
-                  src="./images/cashless-payment.jpg"
-                  alt="Cashless Payment Photo"
-                  width="360"
-                  height="300"
-                />
+                <div class="overflow">
+                  <img
+                    src="./images/cashless-payment.jpg"
+                    alt="Cashless Payment Photo"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="app-name">
                   <h3 class="portfolio-text">Cashless Payment</h3>
                   <p class="portfolio-program">Marketing</p>
                 </div>
               </li>
               <li class="portfolio-point">
-                <img
-                  src="./images/meditation-app.jpg"
-                  alt="Meditation App Photo"
-                  width="360"
-                  height="300"
-                />
+                <div class="overflow">
+                  <img
+                    src="./images/meditation-app.jpg"
+                    alt="Meditation App Photo"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="app-name">
                   <h3 class="portfolio-text">Meditation App</h3>
                   <p class="portfolio-program">App</p>
                 </div>
               </li>
               <li class="portfolio-point">
-                <img
-                  src="./images/taxi-service.jpg"
-                  alt="Taxi Service Photo"
-                  width="360"
-                  height="300"
-                />
+                <div class="overflow">
+                  <img
+                    src="./images/taxi-service.jpg"
+                    alt="Taxi Service Photo"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="app-name">
                   <h3 class="portfolio-text">Taxi Service</h3>
                   <p class="portfolio-program">Marketing</p>
                 </div>
               </li>
               <li class="portfolio-point">
-                <img
-                  src="./images/screen-illustrations.jpg"
-                  alt="Screen Illustrations Photo"
-                  width="360"
-                  height="300"
-                />
+                <div class="overflow">
+                  <img
+                    src="./images/screen-illustrations.jpg"
+                    alt="Screen Illustrations Photo"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="app-name">
                   <h3 class="portfolio-text">Screen Illustrations</h3>
                   <p class="portfolio-program">Design</p>
                 </div>
               </li>
               <li class="portfolio-point">
-                <img
-                  src="./images/online-courses.jpg"
-                  alt="Online Courses Photo"
-                  width="360"
-                  height="300"
-                />
+                <div class="overflow">
+                  <img
+                    src="./images/online-courses.jpg"
+                    alt="Online Courses Photo"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-text">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="app-name">
                   <h3 class="portfolio-text">Online Courses</h3>
                   <p class="portfolio-program">Marketing</p>
@@ -228,14 +400,43 @@
       </main>
 
       <footer class="footer">
-        <div class="container">
-          <a href="./index.html" class="logo-footer">
-            Web<span class="logo-footer-span">Studio</span></a
-          >
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
+        <div class="footer-div">
+          <div class="container footer-container">
+            <a href="./index.html" class="logo-footer">
+              Web<span class="logo-footer-span">Studio</span></a
+            >
+            <p class="footer-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="media-footer">
+            <h3 class="social-media-text">Social media</h3>
+            <div class="footer-social-media">
+              <ul class="footer-social-list">
+                <li class="social-icon-list">
+                  <svg class="social-icon">
+                    <use href="/images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </li>
+                <li class="social-icon-list">
+                  <svg class="social-icon">
+                    <use href="/images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </li>
+                <li class="social-icon-list">
+                  <svg class="social-icon">
+                    <use href="/images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </li>
+                <li class="social-icon-list">
+                  <svg class="social-icon">
+                    <use href="/images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </footer>
     </div>
