--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <li class="point">
                 <div class="features-icon-container">
                   <svg class="features-icon">
-                    <use href="/images/icons.svg#icon-antenna-1"></use>
+                    <use href="./images/icons.svg#icon-antenna-1"></use>
                   </svg>
                 </div>
                 <h3 class="features-text">Strategy</h3>
@@ -75,7 +75,7 @@
               <li class="point">
                 <div class="features-icon-container">
                   <svg class="features-icon">
-                    <use href="/images/icons.svg#icon-clock-1"></use>
+                    <use href="./images/icons.svg#icon-clock-1"></use>
                   </svg>
                 </div>
                 <h3 class="features-text">Punctuality</h3>
@@ -87,7 +87,7 @@
               <li class="point">
                 <div class="features-icon-container">
                   <svg class="features-icon">
-                    <use href="/images/icons.svg#icon-diagram-1"></use>
+                    <use href="./images/icons.svg#icon-diagram-1"></use>
                   </svg>
                 </div>
                 <h3 class="features-text">Diligence</h3>
@@ -99,7 +99,7 @@
               <li class="point">
                 <div class="features-icon-container">
                   <svg class="features-icon">
-                    <use href="/images/icons.svg#icon-astronaut-1"></use>
+                    <use href="./images/icons.svg#icon-astronaut-1"></use>
                   </svg>
                 </div>
                 <h3 class="features-text">Technologies</h3>
@@ -131,22 +131,22 @@
                   <ul class="social-list">
                     <li class="social-icon-list">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#icon-instagram-2"></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </li>
                     <li class="social-icon-list">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#icon-twitter-1"></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </li>
                     <li class="social-icon-list">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#icon-facebook-1"></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </li>
                     <li class="social-icon-list">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#icon-linkedin-1"></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </li>
                   </ul>
@@ -167,22 +167,22 @@
                   <ul class="social-list">
                     <li class="social-icon-list">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#icon-instagram-2"></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </li>
                     <li class="social-icon-list">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#icon-twitter-1"></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </li>
                     <li class="social-icon-list">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#icon-facebook-1"></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </li>
                     <li class="social-icon-list">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#icon-linkedin-1"></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </li>
                   </ul>
@@ -203,22 +203,22 @@
                   <ul class="social-list">
                     <li class="social-icon-list">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#icon-instagram-2"></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </li>
                     <li class="social-icon-list">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#icon-twitter-1"></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </li>
                     <li class="social-icon-list">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#icon-facebook-1"></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </li>
                     <li class="social-icon-list">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#icon-linkedin-1"></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </li>
                   </ul>
@@ -239,22 +239,22 @@
                   <ul class="social-list">
                     <li class="social-icon-list">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#icon-instagram-2"></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </li>
                     <li class="social-icon-list">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#icon-twitter-1"></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </li>
                     <li class="social-icon-list">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#icon-facebook-1"></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </li>
                     <li class="social-icon-list">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#icon-linkedin-1"></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </li>
                   </ul>
@@ -416,22 +416,22 @@
               <ul class="footer-social-list">
                 <li class="social-icon-list">
                   <svg class="social-icon">
-                    <use href="/images/icons.svg#icon-instagram-2"></use>
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
                   </svg>
                 </li>
                 <li class="social-icon-list">
                   <svg class="social-icon">
-                    <use href="/images/icons.svg#icon-twitter-1"></use>
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
                   </svg>
                 </li>
                 <li class="social-icon-list">
                   <svg class="social-icon">
-                    <use href="/images/icons.svg#icon-facebook-1"></use>
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
                   </svg>
                 </li>
                 <li class="social-icon-list">
                   <svg class="social-icon">
-                    <use href="/images/icons.svg#icon-linkedin-1"></use>
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
                   </svg>
                 </li>
               </ul>
