--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <ul class="features-list">
               <li class="point">
                 <div class="features-icon-container">
-                  <svg class="features-icon">
+                  <svg class="features-icon" width="64" height="64">
                     <use href="./images/icons.svg#icon-antenna-1"></use>
                   </svg>
                 </div>
@@ -74,7 +74,7 @@
               </li>
               <li class="point">
                 <div class="features-icon-container">
-                  <svg class="features-icon">
+                  <svg class="features-icon" width="64" height="64">
                     <use href="./images/icons.svg#icon-clock-1"></use>
                   </svg>
                 </div>
@@ -86,7 +86,7 @@
               </li>
               <li class="point">
                 <div class="features-icon-container">
-                  <svg class="features-icon">
+                  <svg class="features-icon" width="64" height="64">
                     <use href="./images/icons.svg#icon-diagram-1"></use>
                   </svg>
                 </div>
@@ -98,7 +98,7 @@
               </li>
               <li class="point">
                 <div class="features-icon-container">
-                  <svg class="features-icon">
+                  <svg class="features-icon" width="64" height="64">
                     <use href="./images/icons.svg#icon-astronaut-1"></use>
                   </svg>
                 </div>
@@ -123,31 +123,37 @@
                   width="264"
                   height="260"
                 />
-                <div class="job-name">
+                <div class="bottom-point">
                   <h3 class="our-team-name">Mark Guerrero</h3>
                   <p class="our-team-text">Product Designer</p>
-                </div>
-                <div class="social-media">
                   <ul class="social-list">
                     <li class="social-icon-list">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-instagram-2"></use>
-                      </svg>
+                      <a href="" class="social-link">
+                        <svg class="social-icon" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="social-icon-list">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-twitter-1"></use>
-                      </svg>
+                      <a href="" class="social-link">
+                        <svg class="social-icon" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-twitter-1"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="social-icon-list">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-facebook-1"></use>
-                      </svg>
+                      <a href="" class="social-link">
+                        <svg class="social-icon" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-facebook-1"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="social-icon-list">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-linkedin-1"></use>
-                      </svg>
+                      <a href="" class="social-link">
+                        <svg class="social-icon" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-linkedin-1"></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -159,31 +165,37 @@
                   width="264"
                   height="260"
                 />
-                <div class="job-name">
-                  <h3 class="our-team-name">Tom Ford</h3>
-                  <p class="our-team-text">Frontend Developer</p>
-                </div>
-                <div class="social-media">
+                <div class="bottom-point">
+                  <h3 class="our-team-name">Mark Guerrero</h3>
+                  <p class="our-team-text">Product Designer</p>
                   <ul class="social-list">
                     <li class="social-icon-list">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-instagram-2"></use>
-                      </svg>
+                      <a href="" class="social-link">
+                        <svg class="social-icon" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="social-icon-list">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-twitter-1"></use>
-                      </svg>
+                      <a href="" class="social-link">
+                        <svg class="social-icon" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-twitter-1"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="social-icon-list">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-facebook-1"></use>
-                      </svg>
+                      <a href="" class="social-link">
+                        <svg class="social-icon" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-facebook-1"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="social-icon-list">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-linkedin-1"></use>
-                      </svg>
+                      <a href="" class="social-link">
+                        <svg class="social-icon" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-linkedin-1"></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -195,31 +207,37 @@
                   width="264"
                   height="260"
                 />
-                <div class="job-name">
-                  <h3 class="our-team-name">Camila Garcia</h3>
-                  <p class="our-team-text">Marketing</p>
-                </div>
-                <div class="social-media">
+                <div class="bottom-point">
+                  <h3 class="our-team-name">Mark Guerrero</h3>
+                  <p class="our-team-text">Product Designer</p>
                   <ul class="social-list">
                     <li class="social-icon-list">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-instagram-2"></use>
-                      </svg>
+                      <a href="" class="social-link">
+                        <svg class="social-icon" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="social-icon-list">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-twitter-1"></use>
-                      </svg>
+                      <a href="" class="social-link">
+                        <svg class="social-icon" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-twitter-1"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="social-icon-list">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-facebook-1"></use>
-                      </svg>
+                      <a href="" class="social-link">
+                        <svg class="social-icon" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-facebook-1"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="social-icon-list">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-linkedin-1"></use>
-                      </svg>
+                      <a href="" class="social-link">
+                        <svg class="social-icon" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-linkedin-1"></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -231,31 +249,37 @@
                   width="264"
                   height="260"
                 />
-                <div class="job-name">
-                  <h3 class="our-team-name">Daniel Wilson</h3>
-                  <p class="our-team-text">UI Designer</p>
-                </div>
-                <div class="social-media">
+                <div class="bottom-point">
+                  <h3 class="our-team-name">Mark Guerrero</h3>
+                  <p class="our-team-text">Product Designer</p>
                   <ul class="social-list">
                     <li class="social-icon-list">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-instagram-2"></use>
-                      </svg>
+                      <a href="" class="social-link">
+                        <svg class="social-icon" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="social-icon-list">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-twitter-1"></use>
-                      </svg>
+                      <a href="" class="social-link">
+                        <svg class="social-icon" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-twitter-1"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="social-icon-list">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-facebook-1"></use>
-                      </svg>
+                      <a href="" class="social-link">
+                        <svg class="social-icon" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-facebook-1"></use>
+                        </svg>
+                      </a>
                     </li>
                     <li class="social-icon-list">
-                      <svg class="social-icon">
-                        <use href="./images/icons.svg#icon-linkedin-1"></use>
-                      </svg>
+                      <a href="" class="social-link">
+                        <svg class="social-icon" width="16px" height="16px">
+                          <use href="./images/icons.svg#icon-linkedin-1"></use>
+                        </svg>
+                      </a>
                     </li>
                   </ul>
                 </div>
@@ -276,13 +300,11 @@
                     width="360"
                     height="300"
                   />
-                  <div class="overlay">
-                    <p class="overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="app-name">
                   <h3 class="portfolio-text">Banking App</h3>
@@ -297,13 +319,11 @@
                     width="360"
                     height="300"
                   />
-                  <div class="overlay">
-                    <p class="overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="app-name">
                   <h3 class="portfolio-text">Cashless Payment</h3>
@@ -318,13 +338,11 @@
                     width="360"
                     height="300"
                   />
-                  <div class="overlay">
-                    <p class="overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="app-name">
                   <h3 class="portfolio-text">Meditation App</h3>
@@ -339,13 +357,11 @@
                     width="360"
                     height="300"
                   />
-                  <div class="overlay">
-                    <p class="overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="app-name">
                   <h3 class="portfolio-text">Taxi Service</h3>
@@ -360,13 +376,11 @@
                     width="360"
                     height="300"
                   />
-                  <div class="overlay">
-                    <p class="overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="app-name">
                   <h3 class="portfolio-text">Screen Illustrations</h3>
@@ -381,13 +395,11 @@
                     width="360"
                     height="300"
                   />
-                  <div class="overlay">
-                    <p class="overlay-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="app-name">
                   <h3 class="portfolio-text">Online Courses</h3>
@@ -411,31 +423,37 @@
             </p>
           </div>
           <div class="media-footer">
-            <h3 class="social-media-text">Social media</h3>
-            <div class="footer-social-media">
-              <ul class="footer-social-list">
-                <li class="social-icon-list">
-                  <svg class="social-icon">
+            <p class="social-media-text">Social media</p>
+            <ul class="footer-social-list">
+              <li class="social-icon-list">
+                <a href="" class="footer-link">
+                  <svg class="footer-social-icon" width="24px" height="24px">
                     <use href="./images/icons.svg#icon-instagram-2"></use>
                   </svg>
-                </li>
-                <li class="social-icon-list">
-                  <svg class="social-icon">
+                </a>
+              </li>
+              <li class="social-icon-list">
+                <a href="" class="footer-link">
+                  <svg class="footer-social-icon" width="24px" height="24px">
                     <use href="./images/icons.svg#icon-twitter-1"></use>
                   </svg>
-                </li>
-                <li class="social-icon-list">
-                  <svg class="social-icon">
+                </a>
+              </li>
+              <li class="social-icon-list">
+                <a href="" class="footer-link">
+                  <svg class="footer-social-icon" width="24px" height="24px">
                     <use href="./images/icons.svg#icon-facebook-1"></use>
                   </svg>
-                </li>
-                <li class="social-icon-list">
-                  <svg class="social-icon">
+                </a>
+              </li>
+              <li class="social-icon-list">
+                <a href="" class="footer-link">
+                  <svg class="footer-social-icon" width="24px" height="24px">
                     <use href="./images/icons.svg#icon-linkedin-1"></use>
                   </svg>
-                </li>
-              </ul>
-            </div>
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
       </footer>
