--- a/index.html
+++ b/index.html
@@ -129,28 +129,28 @@
                   <ul class="social-list">
                     <li class="social-icon-list">
                       <a href="" class="social-link">
-                        <svg class="social-icon" width="16px" height="16px">
+                        <svg class="social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-instagram-2"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-icon-list">
                       <a href="" class="social-link">
-                        <svg class="social-icon" width="16px" height="16px">
+                        <svg class="social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-twitter-1"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-icon-list">
                       <a href="" class="social-link">
-                        <svg class="social-icon" width="16px" height="16px">
+                        <svg class="social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-facebook-1"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-icon-list">
                       <a href="" class="social-link">
-                        <svg class="social-icon" width="16px" height="16px">
+                        <svg class="social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-linkedin-1"></use>
                         </svg>
                       </a>
@@ -171,28 +171,28 @@
                   <ul class="social-list">
                     <li class="social-icon-list">
                       <a href="" class="social-link">
-                        <svg class="social-icon" width="16px" height="16px">
+                        <svg class="social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-instagram-2"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-icon-list">
                       <a href="" class="social-link">
-                        <svg class="social-icon" width="16px" height="16px">
+                        <svg class="social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-twitter-1"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-icon-list">
                       <a href="" class="social-link">
-                        <svg class="social-icon" width="16px" height="16px">
+                        <svg class="social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-facebook-1"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-icon-list">
                       <a href="" class="social-link">
-                        <svg class="social-icon" width="16px" height="16px">
+                        <svg class="social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-linkedin-1"></use>
                         </svg>
                       </a>
@@ -213,28 +213,28 @@
                   <ul class="social-list">
                     <li class="social-icon-list">
                       <a href="" class="social-link">
-                        <svg class="social-icon" width="16px" height="16px">
+                        <svg class="social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-instagram-2"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-icon-list">
                       <a href="" class="social-link">
-                        <svg class="social-icon" width="16px" height="16px">
+                        <svg class="social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-twitter-1"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-icon-list">
                       <a href="" class="social-link">
-                        <svg class="social-icon" width="16px" height="16px">
+                        <svg class="social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-facebook-1"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-icon-list">
                       <a href="" class="social-link">
-                        <svg class="social-icon" width="16px" height="16px">
+                        <svg class="social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-linkedin-1"></use>
                         </svg>
                       </a>
@@ -255,28 +255,28 @@
                   <ul class="social-list">
                     <li class="social-icon-list">
                       <a href="" class="social-link">
-                        <svg class="social-icon" width="16px" height="16px">
+                        <svg class="social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-instagram-2"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-icon-list">
                       <a href="" class="social-link">
-                        <svg class="social-icon" width="16px" height="16px">
+                        <svg class="social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-twitter-1"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-icon-list">
                       <a href="" class="social-link">
-                        <svg class="social-icon" width="16px" height="16px">
+                        <svg class="social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-facebook-1"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="social-icon-list">
                       <a href="" class="social-link">
-                        <svg class="social-icon" width="16px" height="16px">
+                        <svg class="social-icon" width="16" height="16">
                           <use href="./images/icons.svg#icon-linkedin-1"></use>
                         </svg>
                       </a>
@@ -427,28 +427,28 @@
             <ul class="footer-social-list">
               <li class="social-icon-list">
                 <a href="" class="footer-link">
-                  <svg class="footer-social-icon" width="24px" height="24px">
+                  <svg class="footer-social-icon" width="24" height="px">
                     <use href="./images/icons.svg#icon-instagram-2"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-icon-list">
                 <a href="" class="footer-link">
-                  <svg class="footer-social-icon" width="24px" height="24px">
+                  <svg class="footer-social-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-twitter-1"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-icon-list">
                 <a href="" class="footer-link">
-                  <svg class="footer-social-icon" width="24px" height="24px">
+                  <svg class="footer-social-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-facebook-1"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-icon-list">
                 <a href="" class="footer-link">
-                  <svg class="footer-social-icon" width="24px" height="24px">
+                  <svg class="footer-social-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-linkedin-1"></use>
                   </svg>
                 </a>
