--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 
       <footer class="footer">
         <div class="footer-div">
-          <div class="container footer-container">
+          <div class="footer-container container">
             <a href="./index.html" class="logo-footer">
               Web<span class="logo-footer-span">Studio</span></a
             >
@@ -427,7 +427,7 @@
             <ul class="footer-social-list">
               <li class="social-icon-list">
                 <a href="" class="footer-link">
-                  <svg class="footer-social-icon" width="24" height="px">
+                  <svg class="footer-social-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-instagram-2"></use>
                   </svg>
                 </a>
