--- a/index.html
+++ b/index.html
@@ -412,8 +412,8 @@
       </main>
 
       <footer class="footer">
-        <div class="footer-div">
-          <div class="footer-container container">
+        <div class="footer-div container">
+          <div class="footer-container">
             <a href="./index.html" class="logo-footer">
               Web<span class="logo-footer-span">Studio</span></a
             >
